[project]
name = "gendoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.1.0",
    "django>=6.0.2",
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
    "pyyaml>=6.0.3",
    "rich>=14.3.2",
    "textual>=7.5.0",
    "typer>=0.23.1",
    "weasyprint>=68.1",
    "xhtml2pdf>=0.2.17",
]
